--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="dog-buttons"></div>
 
 		<!-- dump dog images here -->
-		<div id="dog-breeds">poster</div>
+		<div id="dog-breeds"></div>
 
 		<form id="dog-form">
 			<label for='dog-input'>Add a dog breed</label>
